--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,26 @@
  *
  *= require_tree .
  *= require_self
+ *= require font-awesome
  */
+
+panel{
+  padding-top: 10px;
+  width: 950px;
+}
+.panel-left{
+  padding-top: 2%;
+  width: 20%;
+  float: left;
+  height: 100%;
+  background-color: gainsboro;
+}
+.panel-right{
+  padding-top: 2%;
+  width: 80%;
+  float: right;
+  min-height: 950px;
+  padding-left: 20px;
+  background-color: white;
+  overflow-y: scroll;
+}
