--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,28 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body style='background-color: gainsboro'>
+    <%= render 'layouts/navbar' %>
+    <% if request.fullpath.split('/').blank? %>
+      <div class='d-flex justify-content-center' style='background-color: white'>
+        <div class='col-md-4'> 
+          <%= yield %>
+        </div>
+      </div>
+    <% else %> 
+      <div class='d-flex justify-content-center'>
+        <div class='col-md-11 panel'>
+          <div class='panel-left'>  <%= render 'layouts/side_panel' %> </div>
+          <div class='panel-right'> <%= yield %> </div>
+        </div>
+      </div>
+    <% end %>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
