--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,3 +9,7 @@
 <p>
   Looking for employees? You've come to the right place.
 </p>
+<p>
+  <%= link_to 'Sign Up', new_user_path,    class:'btn', style:'background-color: gainsboro' %>
+  <%= link_to 'Sign In', new_session_path, class:'btn btn-outline-dark' %>
+</p>
