--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,3 +35,30 @@ panel{
   background-color: white;
   overflow-y: scroll;
 }
+
+  .flash-disappear{
+  position: absolute;
+  width: 50%;
+  z-index: 5;
+
+  animation: fade         7s forwards;
+  -webkit-animation: fade 7s forwards;
+  -moz-animation: fade    7s forwards;
+  -o-animation: fade      7s forwards;
+  -ms-animation: fade     7s forwards;
+}
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+
+  10% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
