--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: gainsboro">
-  <div class="container-fluid col-md-11">
+  <div class="container-fluid col-md-11" style='height:60px'>
     <a class="navbar-brand" href="/">GetWork</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -35,6 +35,11 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-dark" type="submit">Search</button>
       </form>
+      <% if Current.user.present? %>
+        <%= link_to Current.user.name, destroy_user_session_path(id: Current.user.id), data:{turbo_method: :delete, turbo_confirm: "Log out?"}, style:'color:black; text-decoration: none; padding-left: 20px' %>
+      <% else %>
+        <%= link_to "log in", new_session_path, style:'color:black; text-decoration: none; padding-left:20px' %>
+      <% end %>
     </div>
   </div>
 </nav>
