--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,6 +10,10 @@
   Looking for employees? You've come to the right place.
 </p>
 <p>
-  <%= link_to 'Sign Up', new_user_path,    class:'btn', style:'background-color: gainsboro' %>
-  <%= link_to 'Sign In', new_session_path, class:'btn btn-outline-dark' %>
+  <% if !Current.user.present? %>
+    <%= link_to 'Sign Up', new_user_path,    class:'btn', style:'background-color: gainsboro' %>
+    <%= link_to 'Sign In', new_session_path, class:'btn btn-outline-dark' %>
+  <% else %>
+    <%= link_to 'Job Feed', '#', class:'btn', style:'background-color: gainsboro' %>
+  <% end %>
 </p>
