--- a/app/views/users/edit_password.html.erb
+++ b/app/views/users/edit_password.html.erb
@@ -1,2 +1,18 @@
-edit password 
-<%= @user.name %>
+<h3> Edit Password <%= @user.name %> </h3>
+
+<%= form_with model:@user, url: change_password_path, class:'col-md-6', method: :post do |u|%>
+  <p>
+    <h5> <%= u.label :old_password %> </h5>
+    <%= u.password_field :old_password, class:'form-control' %>
+  </p>
+  <p>
+    <h5> <%= u.label :new_password %> </h5>
+    <%= u.password_field :new_password, class:'form-control' %>
+  </p>
+  <p>
+    <h5> <%= u.label :new_password_confirmation %> </h5>
+    <%= u.password_field :new_password_confirmation, class:'form-control' %>
+  </p>
+  <%= u.submit "Change Password", class:'btn', style:'background-color: gainsboro' %>
+<% end %>
+<%= link_to "Cancel", edit_user_registration_path(id: @user.id), class:'btn btn-dark mt-4' %>
