--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,34 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h2> Profile </h2>
+
+<div class="card col-md-10">
+  <div class="card-header text-center">
+    <h2> <%= image_tag(@user.photo, class:'circle-photo') if @user.photo.present?%> </h2>
+  </div>
+  <div class="card-body d-flex justify-content-center">
+    <div class='row' style='width: 400px'>
+      <div class='col-md-6'>
+        <h5 class="card-title"> Name:      </h5>
+        <h5 class="card-title"> Email:     </h5>
+        <h5 class="card-title"> Education: </h5>
+      </div>
+      <div class='col-md-6'>
+        <h5 class="card-title"> <%= @user.name  %> </h5>
+        <h5 class="card-title"> <%= @user.email %> </h5>
+        <h5 class="card-title"> <%= @user.tertiary_education %> </h5>
+      </div>      
+    </div>
+  </div>
+  <div class="card-footer text-muted d-flex justify-content-center">
+    <div class='row' style='width: 400px'>
+      <div class='col-md-6'>
+        <h5 class="card-title"> Cover Letter:      </h5>
+      </div>
+      <div class='col-md-6'>
+        <h5 class="card-title"> <%= @user.cover_letter  %> </h5>
+      </div>      
+    </div>
+  </div>
+</div>
+<% if Current.user.id == @user.id %>
+  <%= link_to "Edit Profile", edit_user_registration_path(id: @user.id), class:'btn btn-primary mt-4' %>
+<% end %>
