--- a/app/views/layouts/_side_panel.html.erb
+++ b/app/views/layouts/_side_panel.html.erb
@@ -1,7 +1,7 @@
 <% if Current.user.present?%>
   <p> 
     <%= link_to show_user_path(id:Current.user.id), style:'color: black; text-decoration: none' do %>
-      <%= fa_icon 'user' %> &nbsp Profile 
+      <%= fa_icon 'user' %> &nbsp My Profile 
     <% end %>
   </p>
 <% end %>
@@ -17,13 +17,5 @@
 </p>
 
 <p>
-  <%= form_with url: search_users_path, method: :post, id: 'search_form' do |f| %>
-    <%= f.search_field :search_word, value: params[:search_word],placeholder: 'Search word', autocomplete: 'off' %>
-    <%= f.submit "Search", class:'btn btn-outline-light', style:'color:black' %>
-  <% end %>
-  <% if @users_results.present? %>
-    <div id='search_results'>
-      <%= render 'layouts/search_results', users: @users_results %>
-    </div>
-  <% end %>
+  <%= link_to "Search", search_path, class:'btn btn-outline-light', style:'color:black' %>
 </p>
