--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,15 +15,15 @@
         <h5 class="card-title"> <%= @user.name  %> </h5>
         <h5 class="card-title"> <%= @user.email %> </h5>
         <h5 class="card-title"> <%= @user.tertiary_education %> </h5>
-      </div>      
+      </div>
     </div>
   </div>
   <div class="card-footer text-muted d-flex justify-content-center">
-    <div class='row' style='width: 400px'>
+    <div class='row'>
       <div class='col-md-6'>
-        <h5 class="card-title"> Cover Letter:      </h5>
+        <h5 class="card-title" style='text-align: right; padding-right:55px'> Cover Letter:      </h5>
       </div>
-      <div class='col-md-6'>
+      <div class='col-md-5'>
         <h5 class="card-title"> <%= @user.cover_letter  %> </h5>
       </div>      
     </div>
