--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,5 +30,5 @@
   </div>
 </div>
 <% if Current.user.id == @user.id %>
-  <%= link_to "Edit Profile", edit_user_registration_path(id: @user.id), class:'btn btn-primary mt-4' %>
+  <%= link_to "Edit Profile", edit_user_registration_path(id: @user.id), class:'btn btn-dark mt-4' %>
 <% end %>
