--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -34,5 +34,6 @@
 </div>
 <% if @company.user_id == Current.user.id %>
   <%= link_to "Edit Company Account", edit_company_path(id: @company.id), class:'btn btn-dark' %>
+  <%= link_to "Create Job Post", new_job_path(id: @company.id), class:'btn btn-secondary' %>
 <% end %>
 
