--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
     <h2> <%= image_tag(@user.photo, class:'circle-photo') if @user.photo.present?%> </h2>
   </div>
   <div class="card-body d-flex justify-content-center">
-    <div class='row' style='width: 400px'>
+    <div class='row' style='width: 500px'>
       <div class='col-md-6'>
         <h5 class="card-title"> Name:      </h5>
         <h5 class="card-title"> Email:     </h5>
@@ -20,12 +20,14 @@
   </div>
   <div class="card-footer text-muted d-flex justify-content-center">
     <div class='row'>
+      <% if @user.cover_letter.present? %>
       <div class='col-md-6'>
         <h5 class="card-title" style='text-align: right; padding-right:55px'> Cover Letter:      </h5>
       </div>
       <div class='col-md-5'>
         <h5 class="card-title"> <%= @user.cover_letter  %> </h5>
-      </div>      
+      </div> 
+      <% end %>    
     </div>
   </div>
 </div>
