--- a/app/views/layouts/_side_panel.html.erb
+++ b/app/views/layouts/_side_panel.html.erb
@@ -16,6 +16,6 @@
   <% end %>
 </p>
 
-<p>
-  <%= link_to "Search", search_path, class:'btn btn-outline-light', style:'color:black' %>
-</p>
+<p class='row'>
+  <%= link_to "Search", search_path, class:'btn btn-outline-dark col-9' %>
+</p> 
