--- a/app/views/layouts/_side_panel.html.erb
+++ b/app/views/layouts/_side_panel.html.erb
@@ -6,7 +6,7 @@
   </p>
 <% end %>
 <p> 
-  <%= link_to '#', style:'color: black; text-decoration: none' do %>
+  <%= link_to list_applications_path, style:'color: black; text-decoration: none' do %>
     <%= fa_icon 'file-text' %> &nbsp Your Applications
   <% end %>
 </p>
