--- a/app/views/enlistments/list.html.erb
+++ b/app/views/enlistments/list.html.erb
@@ -2,6 +2,6 @@
 
 <%= turbo_stream_from "enlistments" %>
 <div class='col-md-4' id='enlistments'>
-  <p> <h6> <%= @enlistments.count+1 %> applications </h6> </p>
+  <p> <h6> <%= @enlistments.count %> application(s) </h6> </p>
   <%= render @enlistments %>
 </div>
