made categories and job_categories models

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -16,7 +16,7 @@
         <p> Required_Experience: </p> 
       </div>
       <div class='col-md-9'>
-        <p> <%= @job.required_experience %> </p>
+        <p> <%= @job.required_experience %> years </p>
       </div>
       <div class='col-md-3'>
         <p> Salary:  </p>
