--- a/app/views/jobs/list.html.erb
+++ b/app/views/jobs/list.html.erb
@@ -2,5 +2,9 @@
 
 <%= turbo_stream_from "jobs" %>
 <div id="jobs">
-  <%= render @jobs %>
+  <% if @jobs.blank? %>
+    <p> No Job Posts from your Company </p>
+  <% else %>
+    <%= render @jobs %>
+  <% end %>
 </div>
