--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -1,20 +1,22 @@
-<div class="list-group">
-  <%= link_to show_company_path(id: company.id), class:"list-group-item list-group-item-action mb-4", style:'color:black; text-decoration: none' do %>
-    <div class='row'>
-      <div class='col-md-2'>
-      <%= image_tag(company.logo, class:'small-circle-photo') if company.logo.present? %>
-      </div>
-      <div class="d-flex justify-content-between mb-2 col-md-8">
-        <div class='row'>
-          <div class='col-md-12'>
-            <h6> <%= company.name %> </h6>
-            <small> <% company.website %> </small>
-          </div>
-          <div class='col-md-12'>
-            <small> <%= company.description.truncate(40) %> </small>
+<div class="list-group col-md-11">
+  <div class="company-<%= company.user_id %> list-group-item list group-item-action mt-2 mb-3">
+    <%= link_to show_company_path(id: company.id), class:"mb-4", style:'color:black; text-decoration: none' do %>
+      <div class="row company-<%= company.user_id %>">
+        <div class='col-md-2'>
+        <%= image_tag(company.logo, class:'small-circle-photo') if company.logo.present? %>
+        </div>
+        <div class="d-flex justify-content-between mb-2 col-md-8">
+          <div class='row'>
+            <div class='col-md-12'>
+              <h6> <%= company.name %> </h6>
+              <small> <% company.website %> </small>
+            </div>
+            <div class='col-md-12'>
+              <small> <%= company.description.truncate(40) %> </small>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
