--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -11,12 +11,18 @@
           <h5 class="card-title"> Email:     </h5>
           <h5 class="card-title"> Location:  </h5>
           <h5 class="card-title"> Number Employees: </h5>
+          <h5 class="card-title"> Categories </h5>
         </div>
         <div class='col-md-6'>
           <h5 class="card-title"> <%= @company.name  %> </h5>
           <h5 class="card-title"> <%= link_to @company.website, 'https://www.google.com', style:'text-decoration: none; color: black' %> </h5>
           <h5 class="card-title"> <%= @company.location %> </h5>
           <h5 class="card-title"> <%= @company.number_employees %> </h5>
+          <h5 class="card-title">
+            <% @categories.each do |category| %>
+              <%= category.name %>; 
+            <% end %> 
+          </h5>
         </div>
       </div>
     </div>
