--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,13 +1,13 @@
 <% if flash[:alert] %>
   <% flash.each do |name, msg|%>
-    <div class='alert alert-danger flash-disappear' style='width:1320px'>
+    <div class='alert alert-danger flash-disappear'>
       <%= msg%>
     </div>
   <% end %>
 <% end %>
 <% if flash[:notice] %>
   <% flash.each do |name, msg|%>
-    <div class='alert alert-primary flash-disappear' style='width:1320px'>
+    <div class='alert alert-primary flash-disappear'>
       <%= msg%>
     </div>
   <% end %>
