--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,34 +5,46 @@
     <h2> <%= image_tag(@user.photo, class:'circle-photo') if @user.photo.present?%> </h2>
   </div>
   <div class="card-body d-flex justify-content-center">
-    <div class='row' style='width: 500px'>
-      <div class='col-md-6'>
+    <div class='row'> 
+      <div class='col-md-6' style='text-align: right; padding-right: 25px;'>
         <h5 class="card-title"> Name:      </h5>
         <h5 class="card-title"> Email:     </h5>
         <h5 class="card-title"> Education: </h5>
+        <h5 class="card-title"> Categories of Interest: </h5>
       </div>
-      <div class='col-md-6'>
+      <div class='col-md-6' style='padding-left: 25px'>
         <h5 class="card-title"> <%= @user.name  %> </h5>
         <h5 class="card-title"> <%= @user.email %> </h5>
         <h5 class="card-title"> <%= @user.tertiary_education %> </h5>
+        <h5 class="card-title"> 
+          <%  @user.user_categories.each do |user_category| %>
+            <%= Category.find(user_category.category_id).name %>;
+          <% end %>
+        </h5>
       </div>
     </div>
   </div>
   <div class="card-footer text-muted d-flex justify-content-center">
     <div class='row'>
       <% if @user.cover_letter.present? %>
-      <div class='col-md-6'>
-        <h5 class="card-title" style='text-align: right; padding-right:105px'> Cover Letter:      </h5>
+      <div class='col-md-6' style='text-align: right; padding-right: 25px;'>
+        <h5 class="card-title"> Cover Letter:      </h5>
       </div>
-      <div class='col-md-5'> 
+      <div class='col-md-5' style='padding-left: 25px'> 
         <h5 class="card-title"> <%= @user.cover_letter  %> </h5>
       </div> 
-      <% end %>    
+      <% end %> 
     </div>
   </div>
 </div>
 <% if Current.user.id == @user.id %>
   <%= link_to "Edit Profile", edit_user_registration_path(id: @user.id), class:'btn btn-dark mt-4 mb-4' %>
+<% else %>
+  <% if @friendship.new_record? %>
+    <%= link_to "Follow User", follow_path(id: @user.id), data:{turbo_method: :post}, class:'btn btn-primary mt-3 mb-3' %>
+  <% else %>
+    <%= link_to "Unfollow User", unfollow_path(id: @user.id), class:'btn mt-3 mb-3', style:'background-color:red; color:black', data:{turbo_method: :delete, turbo_confirm: "Unfollow?"} %>
+  <% end %>
 <% end %>
 <%= render 'profile' %>
 <% if Current.user.id == @user.id %>
