--- a/app/views/layouts/_side_panel.html.erb
+++ b/app/views/layouts/_side_panel.html.erb
@@ -5,6 +5,16 @@
     <% end %>
   </p>
 <% end %>
+<p>
+  <%= link_to list_posts_path, style:'color: black; text-decoration: none' do %>
+    <%= fa_icon 'th-list' %> &nbsp Posts
+  <% end %>
+</p>
+<p>
+  <%= link_to new_post_path, style:'color: black; text-decoration: none' do %>
+    <%= fa_icon 'plus-square' %> &nbsp New Post
+  <% end %>
+</p>
 <p> 
   <%= link_to list_applications_path, style:'color: black; text-decoration: none' do %>
     <%= fa_icon 'file-text' %> &nbsp Your Applications
