--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,7 @@
  *= require font-awesome
  */
 
+ 
 panel{
   padding-top: 10px;
   width: 950px;
@@ -78,4 +79,30 @@ panel{
 }
 .checkboxx input:checked ~ .checkbox-button{
   pointer-events: all;
+}
+
+.comment-box{
+  word-wrap: break-word;
+  width: fit-content;
+  background-color: darkgray;
+  color: white;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+commentss{
+  height: 700px;
+  width:  700px; 
+}
+.commentss-top{
+  height: 720px;
+  /* width: 100%; */
+  padding-left: 20px;
+  padding-top: 30px;
+  overflow-y: auto;
+}
+.commentss-bottom{
+  /* width:  50%; */
+  padding-left: 20px;
 }
