--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,12 @@
         <%=".company-#{Current.user.id}"%>{
           background-color: gainsboro;
         }
-        <%=".cbox-#{Current.user.id}"%>{
-          background-color: darkblue;
+        <%=".rbox-#{Current.user.id}"%>{
           display: flex;
           justify-content: flex-end;
+        }
+        <%=".cbox-#{Current.user.id}"%>{
+          background-color: darkblue;
         }
       </style>
     <% end %>
