--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,7 +31,7 @@ panel{
   padding-top: 2%;
   width: 85%;
   float: right;
-  min-height: 950px;
+  height: 870px;
   padding-left: 20px;
   background-color: white;
   overflow-y: auto;
@@ -106,3 +106,41 @@ commentss{
   /* width:  50%; */
   padding-left: 20px;
 }
+
+.company-list{
+  min-height: 700px;
+}
+.jobs-list{
+  min-height: 700px;
+}
+.flickr_pagination {
+  text-align: center;
+  padding: 0.3em;
+  cursor: default; }
+  .flickr_pagination a, .flickr_pagination span, .flickr_pagination em {
+    padding: 0.2em 0.5em;
+    border-radius: 5px;
+   }
+  .flickr_pagination .disabled {
+    color: ##575555; }
+  .flickr_pagination .current {
+    font-style: normal;
+    font-weight: bold;
+    color: #ff0084; }
+  .flickr_pagination a {
+    border: 1px solid rgb(1, 57, 177);
+    color: rgb(0,0,0);
+    text-decoration: none; }
+    .flickr_pagination a:hover, .flickr_pagination a:focus {
+      border-color: rgd(1,57,177);
+      background: rgb(89, 100, 150);
+      color: rgb(0, 0, 0); }
+  .flickr_pagination .page_info {
+    color: rgb(0,0,0);
+    padding-top: 0.8em; }
+  .flickr_pagination .previous_page, .flickr_pagination .next_page {
+    border-width: 2px; }
+  .flickr_pagination .previous_page {
+    margin-right: 1em; }
+  .flickr_pagination .next_page {
+    margin-left: 1em; }
