--- a/app/views/comments/list.html.erb
+++ b/app/views/comments/list.html.erb
@@ -2,13 +2,15 @@
 <%= @post.title.truncate(40) %> <small> ~ &nbsp <%= User.find(@post.user_id).name %> </small>
 
 <%= turbo_stream_from "comments" %>
-<div class="commentss" id="comments" data-aos='fade-right' data-aos-duration='2300' style='width: 700px; padding-bottom:20px;'>
-  <div class="commentss-top" style='width: 700px;'>
+<div class="commentss" id="comments" data-aos='fade-righdt' data-aos-duration='2300' style='width: 700px; padding-bottom:20px;'>
+  <div class="commentss-top">
     <% if @comments.present? %>
       <% @comments.each do |c| %> 
-        <div class="comment-box cbox-<%= c.user_id %>"> 
-          <%= c.content %> 
-        </div> 
+        <div class="rbox-<%= c.user_id %>">
+          <div class="comment-box cbox-<%= c.user_id %>"> 
+            <%= c.content %> 
+          </div>
+        </div>
       <% end %> 
     <% else %>
       <div> Be the First to Comment </div>
