--- a/app/views/jobs/list.html.erb
+++ b/app/views/jobs/list.html.erb
@@ -1,10 +1,16 @@
 <h3> Jobs </h3>
 
 <%= turbo_stream_from "jobs" %>
-<div id="jobs">
+<div id="jobs" class="jobs-list">
   <% if @jobs.blank? %>
     <p> No Job Posts from your Company </p>
   <% else %>
     <%= render @jobs %>
+    
   <% end %>
+</div>
+<div class='d-flex justify-content-center align-items-center'>
+  <div class="flickr_pagination" id="footer">
+    <%= will_paginate @jobs %>
+  </div>
 </div>
