--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -116,31 +116,98 @@ commentss{
 .flickr_pagination {
   text-align: center;
   padding: 0.3em;
-  cursor: default; }
-  .flickr_pagination a, .flickr_pagination span, .flickr_pagination em {
-    padding: 0.2em 0.5em;
+  cursor: default; 
+}
+.flickr_pagination a, .flickr_pagination span, .flickr_pagination em {
+  padding: 0.2em 0.5em;
+  border-radius: 5px;
+ }
+.flickr_pagination .disabled {
+  color: #575555; 
+}
+.flickr_pagination .current {
+  font-style: normal;
+  font-weight: bold;
+  color: #ff0084; 
+}
+.flickr_pagination a {
+  border: 1px solid rgb(1, 57, 177);
+  color: rgb(0,0,0);
+  text-decoration: none; 
+}
+.flickr_pagination a:hover, .flickr_pagination a:focus {
+  border-color: rgd(1,57,177);
+  background: rgb(89, 100, 150);
+  color: rgb(0, 0, 0); 
+}
+.flickr_pagination .page_info {
+  color: rgb(0,0,0);
+  padding-top: 0.8em; 
+}
+.flickr_pagination .previous_page, .flickr_pagination .next_page {
+  border-width: 2px; 
+}
+.flickr_pagination .previous_page {
+  margin-right: 1em; 
+}
+.flickr_pagination .next_page {
+  margin-left: 1em; 
+}
+
+.hidden {
+  display: none !important;
+}
+#context-menu{
+  position: fixed;
+  z-index: 1000;
+  background: white;
+  border: 1px solid #ccc;
+  display: flex;
+  flex-direction: column;
+
+  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
+
+  /* a {
+    color: black;
+    text-decoration: none;
+    padding: 5px;
+    margin: 5px;
     border-radius: 5px;
-   }
-  .flickr_pagination .disabled {
-    color: ##575555; }
-  .flickr_pagination .current {
-    font-style: normal;
-    font-weight: bold;
-    color: #ff0084; }
-  .flickr_pagination a {
-    border: 1px solid rgb(1, 57, 177);
-    color: rgb(0,0,0);
-    text-decoration: none; }
-    .flickr_pagination a:hover, .flickr_pagination a:focus {
-      border-color: rgd(1,57,177);
-      background: rgb(89, 100, 150);
-      color: rgb(0, 0, 0); }
-  .flickr_pagination .page_info {
-    color: rgb(0,0,0);
-    padding-top: 0.8em; }
-  .flickr_pagination .previous_page, .flickr_pagination .next_page {
-    border-width: 2px; }
-  .flickr_pagination .previous_page {
-    margin-right: 1em; }
-  .flickr_pagination .next_page {
-    margin-left: 1em; }
+  
+    &:hover{
+      background: #eee;
+    }*/
+} 
+
+ .modal {
+  position: fixed;
+  z-index: 1;
+  padding: 2em;
+  
+  /* Centering */
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 5px;
+  /* Add the drop shadow */
+  box-shadow: 0 0 10px 0 rgba(0,0,0,0.2), 0 5px 10px 0 rgba(0,0,0,0.19);
+}
+
+.cancel-button {
+  background-color: #1530ff;
+  font-size: 12px;
+  color: white;
+  padding: 4px 8px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+  text-decoration: none;
+}
+.cancel-button:hover {
+  background-color: #2640fe;
+}
