--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>Comments#edit</h1>
-<p>Find me in app/views/comments/edit.html.erb</p>
+
+  <div>
+    <h1> Edit Comment </h1>
+    <%= form_with model:@comment, url: update_comment_path do |f| %>
+      <%= f.text_field :content, class:'form-control' %>
+      <%= f.submit "Update", class:'btn btn-primary mt-2' %>
+    <% end %>
+    <%= link_to "Cancel", "#", class:'btn btn-secondary mt-2' %>
+  </div>
