--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
       <div class='d-flex justify-content-center' style='background-color: white'>
         <div class='col-md-4'>
           <%= render 'layouts/flash'  %>
+          <%= turbo_frame_tag "modal" %>
           <%= yield %>
         </div>
       </div>
@@ -40,7 +41,10 @@
       <div class='d-flex justify-content-center'>
         <div class='col-md-11 panel'>
           <div class='panel-left'>  <%= render 'layouts/side_panel' %> </div>
-          <div class='panel-right'> <%= render 'layouts/flash'  %> <%= yield %> </div>
+          <div class='panel-right'> <%= render 'layouts/flash'  %> 
+            <%= turbo_frame_tag "modal" %> 
+            <%= yield %> 
+          </div>
         </div>
       </div>
     <% end %>
